# master-thesis-code

./: .gitignore  LICENSE  pyproject.toml
src/asynctorch_experiments/: run_tests.ipynb  run_tests_dev.ipynb  small_net_test.ipynb
src/asynctorch_experiments/buildtools/: __init__.py  better_paths.py  experiment.py  model_builder.py  model_unit.py  parameters.py
src/asynctorch_experiments/buildtools/microbrain/: discrete_mixed_architecture.py  discrete_mixed_architecture_clean.py  mubrain_state.py  mubrain_state_clean.py
src/asynctorch_experiments/data/: load_data.py
src/asynctorch_experiments/evaluation/: monitor.py  plotting.py  test_notebook.ipynb
src/asynctorch_experiments/n_mnist/: data.py  experiment_dicts.py
src/asynctorch_experiments/tests/: run_experiments.ipynb  test_buildtools.py
src/asynctorch_experiments/traintools/: model_trainer.py
