[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["asynctorch_experiments"]

[project]
name = "asynctorch_experiments" 
version = "0.1.0" 
description = "Experiments for Asynchronous spiking neural networks in PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["asynctorch", "n_mnist", "microbrain"]
authors = [
  {name = "Jort Gutter", email = "jort.gutter@ru.nl" },
  {name = "Roel Koopman", email = "roel.koopman@cwi.nl" }
]
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "snntorch>=0.8.1"
]

[project.urls]
"Homepage" = "https://github.com/RoelMK/asynctorch"
"Issues" = "https://github.com/RoelMK/asynctorch/issues"
